--- a/react/package.json
+++ b/react/package.json
@@ -14,6 +14,7 @@
     "flowbite": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
